--- a/committee.tex
+++ b/committee.tex
@@ -39,6 +39,10 @@ In Chapter \ref{ch:case-competition-typology} I introduced two parameters. The m
     \label{fig:two-parameters}
 \end{figure}
 
+So far, I have discussed three different concepts: the internal case, the external case and the relative pronoun. I said things like ``the relative pronoun is allowed to surface in the internal or in the external case''. I have not been explicit about where the competition between the internal and the external case takes place: this could be either before on of them lands on the relative pronoun or they could land both on their separate elements and then a fight needs to be fought out. I argue for the latter. I say that there is actually an internal element that consists of a case-part and of a non-case part. There is also an external element that consists of a case-part and a non-case part. Headless relatives only have a single element, the headless relative, so one of them has to leave at the end. I set this up in this way because the non-case part of the internal and external element are crucial in determining whether the case is allowed to surface in the internal and external case.
+
+
+
 
 Let me now turn to the matter of crosslinguistic differences. Every speaker of a language needs to learn what the pattern for its language is. Headless relatives are infrequent, is what can be said about at least Modern German. Even though not everybody likes the construction to begin with (they prefer (light-)headed relatives), people seem to have the clear intuition that \tsc{int}>\tsc{ext} is much better than the other way around. It seems implausible that learners of German learn this pattern from the few examples they got (there are just too few to make a generalization). Still, the intuition exist. And it is very particular: more complex case wins over less complex case, but only if the internal case is more complex than the external case. This already sounds hard to learn from the input as a generalization. People have also been describing it like this: formulation from Cinque in his book. If it does not come from the input, where does it come from? I claim that it comes from other properties of the language. In Grosu's terminology: is it derived or basic? Ideally, we would want it to be derived.
 
@@ -47,35 +51,48 @@ A similar avenue was pursued by \citealt{himmelreich2017}. She specific language
 The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Like I briefly mentioned in Chapter \ref{ch:decomposition}, Nanosyntax models crosslinguistic variation as differences in the lexicon, how the features are packaged together differently. That means that I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. Specifically, I derive the different behaviors from relative pronouns and the external head that I introduce in this chapter.
 
 
-\section{Rely on containment}
+\section{Containment in non-case}
 
-The second parameter is about which cases are allowed to surface. The goal is to explain why languages there are languages that allow internal and external, languages that allow only internal, but no languages that only allow only external. I propose that this depends again on containment, just as was the case for case competition.
+The goal is to explain why there are languages that allow internal and external, languages that allow only internal, but no languages that only allow only external. I propose we do this by comparing the non-case parts of the internal and the external elements in headless relatives.
 
-Committee: what kind of information does the committee use to decide whether the internal, external or both are allowed to surface? It compares the non-case part of the internal and the external element.
+Headless relatives have an internal element and an external element. Both elements consist of two parts: the case part and a non-case part. Part \ref{part:case-facts} was about the case part of the elements. A more complex case wins over a less complex case because the former contains all features the latter contains. Concretely, the dative wins over the accusative because the dative contains all features the accusative contains, the dative wins over the nominative because the dative contains all features the nominative contains, and the accusative wins over the nominative because the accusative contains all features the nominative contains.
 
-Two containment relations: case and non-case.
+I propose that a containment relation is also the crucial factor that determines in whether a particular language allows the internal and external case to surface. It is not the containment relationship having to do with case, but the one that has to do with the non-case part. I propose that a language allows the internal case to surface when it wins the case competition, if the non-case part of the internal element contains all features that the non-case part of the external element contains. The other way around works the same way: a language allows the external case to surface when it wins the case competition, if the non-case part of the external element contains all features that the non-case part of the internal element contains.
 
-Remember from Chapter \ref{ch:decomposition}, a more complex case wins over a less complex case because the former contains all features the latter contains. Concretely, the dative wins over the accusative because the dative contains all features the accusative contains, the dative wins over the nominative because the dative contains all features the nominative contains, and the accusative wins over the nominative because the accusative contains all features the nominative contains.
-
-I propose that a containment relation is also the crucial factor that determines in whether a particular language allows the internal and external case to surface. It is not the containment relationship having to do with case, but the one that has to do with the non-case part. This raises the question what the non-case parts of the internal and external element are. Headless relatives namely only have a single overt element, the relative pronoun. In Section \ref{sec:int-ext-elements}, I show that the relative pronoun is the internal element, and I introduce another element, which is the external one.
-
-I propose that a language allows the internal case to surface when it wins the case competition, if the non-case part of the internal element contains all features that the non-case part of the external element contains. The other way around works the same way: a language allows the external case to surface when it wins the case competition, if the non-case part of the external element contains all features that the non-case part of the internal element contains.
-
-If the internal non-case part contains the features \tsc{a} and \tsc{b}, and the external non-case part contains only the feature \tsc{a}, the internal is allowed to surface in the language. If the internal non-case part contains the feature \tsc{a}, and the external non-case part contains only the features \tsc{a} and \tsc{b}, the external is allowed to surface in the language. If the internal non-case part contains the features \tsc{a} and \tsc{b}, and the external non-case part contains only the features \tsc{a} and \tsc{b}, the internal and the external are allowed to surface in the language.
+Table \ref{tbl:non-case} gives a table that resembles the case tables I discussed in Chapter \ref{ch:case-competition-typology}. The left column shows the features of the internal non-case part. The top row shows the features of the internal non-case part. The other cells indicate the features of the winning non-case part.
+If the internal non-case part contains the features \tsc{a} or \tsc{a} and \tsc{b}, and the external non-case part contains only the features \tsc{a} or \tsc{a} and \tsc{b}, the internal and the external are allowed to surface in the language. This is the pattern that corresponds to the `non-matching' type of language like Old High German.
+If the internal non-case part contains the feature \tsc{a}, and the external non-case part contains only the features \tsc{a} and \tsc{b}, the external is allowed to surface in the language and the internal is not. This is the pattern that is crosslinguistically not attested. In Section \ref{sec:int-ext-elements} I show why this is the case.
+If the internal non-case part contains the features \tsc{a} and \tsc{b}, and the external non-case part contains only the feature \tsc{a}, the internal is allowed to surface in the language and the external is not. This is the pattern that corresponds to the `non-matching --- internal only' type of language like Modern German.
 
 \begin{table}[H]
-\begin{tabular}{cc}
-  \toprule
-    \ac{int}  & \ac{ext}  \\
-      \cmidrule{1-2}
-    \tsc{ab}  & \tsc{a}   \\
-    \tsc{a}   & \tsc{ab}  \\
-    \tsc{ab}  & \tsc{ab}  \\
-  \bottomrule
-\end{tabular}
+  \center
+  \caption{Relative pronoun in external case}
+  \begin{tabular}{c|c|c}
+    \toprule
+   \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
+          & \tsc{a}
+          & \tsc{a},\tsc{b}
+          \\ \cmidrule{1-3}
+      \tsc{a}
+          & \tsc{a}
+          & \tsc{a},\tsc{b}
+          \\ \cmidrule{1-3}
+      \tsc{a},\tsc{b}
+          & \tsc{a}
+          & \tsc{a},\tsc{b}
+          \\
+    \bottomrule
+  \end{tabular}
+  \label{tbl:non-case}
 \end{table}
 
-The crucial difference between the containment of the case part and the containment of the non-case part is how much it can differ. Case differs from sentence to sentence: in one sentence the internal case is the dative, in the other it is the accusative or the nominative. Therefore, there are different winners in different sentences within the same language. The non-case part is stable within a language. In this chapter, I introduce what the non-case part the internal and external element looks like, and I argue per language what they look like.
+There is a crucial difference between the Table \ref{tbl:non-case} and the case tables in Chapter \ref{ch:case-competition-typology}. The case tables described different situations that are attested within a single language, as I illustrated by going through  examples that correspond to different cells in the tables. Case differs from sentence to sentence: in one sentence the internal case is the dative, in the other it is the accusative or the nominative. The non-case table is not like that: only a single cell in the table corresponds to a particular language. The non-case parts of the internal and external elements are namely stable per language. The relative pronoun has namely a single form, and so does the external element.
+
+Taking this all together, there are two competitions taking place in headless relatives: case competition and non-case competition. Case competition decides which case wins the sentence and non-case competition decides whether the result can go through. Let me put this in the metaphor with the committee I introduced in Section \ref{sec:possible-patterns}. The committee learns who wins the case competition. It can either approve this case or not approve it. The information that the committee uses for their decision is the comparison between the internal and the external element. More specifically, it compares the non-case parts of the internal and external element. The committee approves the winning case if the non-case part of its element contains the non-case part of the element of the losing case.
+
+In sum, a relative pronoun can surface in the internal case if both the non-case and the case part of the internal element contain non-case and case part of the external element. It works the same way the other way around: a relative pronoun can surface in the external case if both the non-case and the case part of the external element contain the non-case and case part of the internal element.
+
+In this chapter, I introduce what the non-case part the internal and external element looks like, and I argue per language what they look like.
 
 
 \section{The internal and external element}\label{sec:int-ext-elements}
@@ -322,9 +339,7 @@ can ext win?
 
 \subsection{Deriving internal-and-external}
 
-Old High German
-
-featural content of relative pronoun
+Old High German relative pronouns consist of a morpheme \tit{d-} and a phi and case portmanteau.
 
 \begin{table}[H]\label{tbl:paradigmohg}
  \center
@@ -346,7 +361,200 @@ featural content of relative pronoun
   \end{tabular}
 \end{table}
 
-featural content of external head
+The external head is the phi features bundle.
+
+\ex.
+\begin{forest} boom
+[, s sep=20mm
+    [\tbf{ϕP}
+        [\phantom{xxx},
+        roof, baseline
+        ]
+    ]
+    [CP
+        [\tsc{rel}P
+            [DP
+                [\tit{d-}, roof]
+            ]
+            [\tsc{accP},
+            tikz={
+            \node[label=below:\tit{-en},
+            draw,circle,
+            scale=0.8,
+            fit to=tree]{};
+            }
+                [\tsc{f2}]
+                [\tsc{nomP}
+                    [\tsc{f1}]
+                    [\tbf{ϕP}
+                        [\phantom{xxx}, roof]
+                    ]
+                ]
+            ]
+        ]
+        [TP
+            [\phantom{xxx}, roof]
+        ]
+    ]
+]
+\end{forest}
+
+merge \tsc{k} (and \tsc{d})? Here it looks like you could do it, or you could not do it, so I will not do it.
+
+\ex.
+\begin{forest} boom
+[, s sep=20mm
+    [\tsc{nom}P,
+    tikz={
+    \node[label=below:\tit{-er},
+    draw,circle,
+    scale=0.8,
+    fit to=tree]{};
+    }
+        [\tsc{f1}]
+        [ϕP
+            [\phantom{xxx},
+            roof, baseline
+            ]
+        ]
+    ]
+    [CP
+        [\tsc{rel}P
+            [DP
+                [\tit{d-}, roof]
+            ]
+            [\tsc{accP},
+                [\tit{-en}, roof]
+            ]
+        ]
+        [TP
+            [\phantom{xxx}, roof]
+        ]
+    ]
+]
+\end{forest}
+
+Now if we compare the internal element to the external element, we see that the internal element contains the external element
+
+\begin{table}[H]
+  \center
+	\caption {Old High German: \ac{int} > \ac{ext}}
+		\begin{tabular}[b]{cc}
+      \toprule
+      \ac{int}  &   \ac{ext} \\ \cmidrule{1-2}
+      \begin{forest} boom
+        [\tsc{rel}P
+            [DP
+                [\tit{d-}, roof]
+            ]
+            [\tsc{acc}P,
+            tikz={
+            \node[label=below:\tit{-en},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{f}2]
+                [\tsc{nom}P
+                    [\tsc{f1}]
+                    [ϕP
+                        [\phantom{xxx},
+                        roof, baseline
+                        ]
+                    ]
+                ]
+            ]
+        ]
+      \end{forest}
+      &
+      \begin{forest} boom
+        [\tsc{nom}P,
+        tikz={
+        \node[label=below:\tit{-er},
+        draw,circle,
+        scale=0.8,
+        fit to=tree]{};
+        }
+            [\tsc{f1}]
+            [ϕP
+                [\phantom{xxx},
+                roof, baseline
+                ]
+            ]
+        ]
+      \end{forest}\\
+      \bottomrule
+  \end{tabular}
+  \label{tbl:ohg-int-wins}
+\end{table}
+
+There is structure with case and phi which contains
+
+
+
+\begin{table}[H]
+  \center
+	\caption {Old High German: \ac{int} < \ac{ext}}
+		\begin{tabular}[b]{cc}
+      \toprule
+      \ac{int}  &   \ac{ext} \\ \cmidrule{1-2}
+      \begin{forest} boom
+        [\tsc{rel}P
+            [DP
+                [\tit{d-}, roof]
+            ]
+            [\tsc{acc}P,
+            tikz={
+            \node[label=below:\tit{-en},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{f}2]
+                [\tsc{nom}P
+                    [\tsc{f1}]
+                    [ϕP
+                        [\phantom{xxx},
+                        roof, baseline
+                        ]
+                    ]
+                ]
+            ]
+        ]
+      \end{forest}
+      &
+      \begin{forest} boom
+        [DP
+            [DP
+                [\tit{d-}, roof]
+            ]
+            [\tsc{dat}P,
+            tikz={
+            \node[label=below:\tit{-em},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{f}3]
+                [\tsc{acc}P
+                    [\tsc{f}2]
+                    [\tsc{nom}P
+                        [\tsc{f1}]
+                        [ϕP
+                            [\phantom{xxx},
+                            roof, baseline
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+        ]
+      \end{forest}\\
+      \bottomrule
+  \end{tabular}
+  \label{tbl:ohg-ext-wins}
+\end{table}
+
 
 \ex. \tbf{Spellout Algorithm:}\\
 Merge F and \label{ex:spellout}
@@ -394,152 +602,165 @@ featural content of relative pronoun
   \end{tabular}
 \end{table}
 
+\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+ we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
+ `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}
 
-featural content of external head
-
-
-So German relative pronoun:
-
-\begin{forest} boom
-[\tsc{relP}, s sep=20mm
-    [\tit{w}, roof]
-    [, s sep=30mm
-        [\tsc{deix}P,
-        tikz={
-        \node[label=below:\tit{e},
-        draw,circle,
-        scale=0.875,
-        fit to=tree]{};
-        }
-            [\tsc{deix}]
-            [\tsc{refP}
-                [\tsc{ref2}]
-                [\tsc{ref1}]
+\begin{table}[H]
+  \center
+	\caption {Modern German: \ac{int} > \ac{ext}}
+		\begin{tabular}[b]{cc}
+      \toprule
+      \ac{int}  &   \ac{ext} \\ \cmidrule{1-2}
+      \begin{forest} boom
+        [\tsc{rel}P
+            [\tsc{wh}P
+                [\tit{w-}, roof]
+            ]
+            [\tsc{acc}P,
+            tikz={
+            \node[label=below:\tit{-en},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{f}2]
+                [\tsc{nom}P
+                    [\tsc{f1}]
+                    [ϕP
+                        [\phantom{xxx},
+                        roof, baseline
+                        ]
+                    ]
+                ]
             ]
         ]
-        [\tsc{acc}P,
+      \end{forest}
+      &
+      \begin{forest} boom
+        [\tsc{nom}P,
         tikz={
-        \node[label=below:\tit{n},
+        \node[label=below:\tit{-er},
         draw,circle,
-        scale=0.925,
+        scale=0.8,
         fit to=tree]{};
         }
-            [\tsc{f2}]
-            [\tsc{nom}P
-                [\tsc{f1}]
-                [\tsc{num}P
-                    [\tsc{num}]
-                    [\tsc{m}P
-                        [\tsc{m}]
-                        [\tsc{n}P
-                            [\tsc{n}]
-                            [\tsc{persP}
-                                [\tsc{pers}]
+            [\tsc{f1}]
+                [ϕP
+                [\phantom{xxx},
+                roof, baseline
+                ]
+            ]
+        ]
+      \end{forest}\\
+      \bottomrule
+  \end{tabular}
+  \label{tbl:mg-int-wins}
+\end{table}
+
+
+\begin{table}[H]
+  \center
+	\caption {Modern German: \ac{int} > \ac{ext}}
+		\begin{tabular}[b]{cc}
+      \toprule
+      \ac{int}  &   \ac{ext} \\ \cmidrule{1-2}
+      \begin{forest} boom
+        [\tsc{rel}P
+            [DP
+                [\tit{w-}, roof]
+            ]
+            [\tsc{acc}P,
+            tikz={
+            \node[label=below:\tit{-en},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{f}2]
+                [\tsc{nom}P
+                    [\tsc{f1}]
+                    [\tsc{dP}
+                        [\tsc{d}]
+                        [ϕP
+                            [\phantom{xxx},
+                            roof, baseline
                             ]
                         ]
                     ]
                 ]
             ]
         ]
-    ]
-]
-\end{forest}
-
-and German head:
-
-\begin{forest} boom
-[, s sep=30mm
-    [\tsc{deix}P,
-    tikz={
-    \node[label=below:\tit{e},
-    draw,circle,
-    scale=0.875,
-    fit to=tree]{};
-    }
-        [\tsc{deix}]
-        [\tsc{refP}
-            [\tsc{ref2}]
-            [\tsc{ref1}]
-        ]
-    ]
-    [\tsc{nom}P,
-    tikz={
-    \node[label=below:\tit{r},
-    draw,circle,
-    scale=0.9,
-    fit to=tree]{};
-    }
-        [\tsc{f1}]
-        [\tsc{num}P
-            [\tsc{num}]
-            [\tsc{m}P
-                [\tsc{m}]
-                [\tsc{n}P
-                    [\tsc{n}]
-                    [\tsc{persP}
-                        [\tsc{pers}]
+      \end{forest}
+      &
+      \begin{forest} boom
+        [\tsc{dat}P,
+        tikz={
+        \node[label=below:\tit{-em},
+        draw,circle,
+        scale=0.85,
+        fit to=tree]{};
+        }
+            [\tsc{f}3]
+            [\tsc{acc}P
+                [\tsc{f}2]
+                [\tsc{nom}P
+                    [\tsc{f1}]
+                    [\tsc{dP}
+                        [\tsc{d}]
+                        [ϕP
+                            [\phantom{xxx},
+                            roof, baseline
+                            ]
+                        ]
                     ]
                 ]
             ]
         ]
-    ]
-]
-\end{forest}
+      \end{forest}\\
+      \bottomrule
+  \end{tabular}
+  \label{tbl:mg-ext-wins}
+\end{table}
+
+
+Florian with his \tit{am Main}
 
 
 
-show how internal-wins works
-show how external-wins does not work
 
-Florian with his am Main
+\subsection{Deriving `matching'}
 
 
 
-\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
- we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
- `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}
-
-Internal structure of the relative clause.
-
-\tit{w} got merged as a complex spec. \tsc{f1} and \tsc{f2} ended up there via backtracking: taking \tit{w} off, spec to spec movement, and spelling it out with the suffix.
-
-\ex.
-\begin{forest} boom
-[, s sep=50mm
-    [\tsc{relP}, s sep=20mm
-        [\tit{w}, roof]
-        [, s sep=30mm
-            [\tsc{deix}P,
-            tikz={
-            \node[label=below:\tit{e},
-            draw,circle,
-            scale=0.875,
-            fit to=tree]{};
-            }
-                [\tsc{deix}]
-                [\tsc{refP}
-                    [\tsc{ref2}]
-                    [\tsc{ref1}]
-                ]
+\begin{table}[H]
+  \center
+	\caption {Polish: \ac{int} > \ac{ext}}
+		\begin{tabular}[b]{cc}
+      \toprule
+      \ac{int}  &   \ac{ext} \\ \cmidrule{1-2}
+      \begin{forest} boom
+        [\tsc{rel}P
+            [\tsc{wh}P
+                [\tit{k-}, roof]
             ]
-            [\tsc{acc}P,
+            [\tsc{dat}P,
             tikz={
-            \node[label=below:\tit{n},
+            \node[label=below:\tit{-omu},
             draw,circle,
-            scale=0.925,
+            scale=0.85,
             fit to=tree]{};
             }
-                [\tsc{f2}]
-                [\tsc{nom}P
-                    [\tsc{f1}]
-                    [\tsc{num}P
-                        [\tsc{num}]
-                        [\tsc{m}P
-                            [\tsc{m}]
-                            [\tsc{n}P
-                                [\tsc{n}]
-                                [\tsc{persP}
-                                    [\tsc{pers}]
+                [\tsc{f}3]
+                [\tsc{acc}P
+                    [\tsc{f}2]
+                    [\tsc{nom}P
+                        [\tsc{f1}]
+                        [\tsc{dP}
+                            [\tsc{d}]
+                            [ϕP
+                                [\phantom{xxx},
+                                roof, baseline
                                 ]
                             ]
                         ]
@@ -547,196 +768,90 @@ Internal structure of the relative clause.
                 ]
             ]
         ]
-    ]
-    [VP
-       [\tit{Maria mag}, roof]
-    ]
-]
-\end{forest}
-
-Structure of the relative clause + the external head that is going to be deleted.
-
-Case is merged above the relative clause. Backtracking takes place, meaning that the relative clause and the head are going to be split up again. Then it can be spelled out with the suffix of the head after spec-to-spec movement.
-
-\ex.
-\begin{forest} boom
-[\tsc{nom}P
-    [\tsc{f1}]
-        [, s sep=15mm
-        [CP
-            [\tsc{relP}
-                [\tit{w}, roof]
-                [
-                    [\tit{e}, roof]
-                    [\tit{n}, roof]
-                ]
-            ]
-            [VP
-               [\tit{Maria mag}, roof]
-            ]
-        ]
-        [, s sep=30mm
-            [\tsc{deix}P,
-        	  tikz={
-        	  \node[label=below:\tit{e},
-        	  draw,circle,
-        	  scale=0.875,
-        	  fit to=tree]{};
-            }
-                [\tsc{deix}]
-                [\tsc{refP}
-                    [\tsc{ref2}]
-                    [\tsc{ref1}]
-                ]
-            ]
-            [\tsc{num}P,
-        	  tikz={
-        	  \node[label=below:\tit{r},
-        	  draw,circle,
-        	  scale=0.9,
-        	  fit to=tree]{};
-            }
-                [\tsc{num}]
-                [\tsc{m}P
-                    [\tsc{m}]
-                    [\tsc{n}P
-                        [\tsc{n}]
-                        [\tsc{persP}
-                            [\tsc{pers}]
-                        ]
-                    ]
-                ]
-            ]
-        ]
-    ]
-]
-\end{forest}
-
-\phantom{x}
-
-
-
-
-\subsection{Deriving neither}
-
-Polish
-
-featural content of relative pronoun
-featural content of external head
-
-
-Polish relative pronoun
-
-\begin{forest} boom
-    [, s sep=40mm
-        [XP,
+      \end{forest}
+      &
+      \begin{forest} boom
+        [\tsc{acc}P,
         tikz={
-        \node[label=below:\tit{k},
+        \node[label=below:\tit{togo},
         draw,circle,
-        scale=0.875,
+        scale=0.8,
         fit to=tree]{};
         }
-            [XP]
-            [\tsc{persP}
-                [\tsc{pers}]
-                [\tsc{deix}P
-                    [\tsc{deix}]
-                    [\tsc{refP}
-                        [\tsc{ref2}]
-                        [\tsc{ref1}]
+            [\tsc{f2}]
+            [\tsc{nom}P
+                [\tsc{f1}]
+                    [ϕP
+                    [\phantom{xxx},
+                    roof, baseline
                     ]
                 ]
             ]
         ]
-        [, s sep=30mm
-            [\tsc{m}P,
-            tikz={
-            \node[label=below:\tit{o},
-            draw,circle,
-            scale=0.925,
-            fit to=tree]{};
-            }
-                [\tsc{m}]
-                [\tsc{n}P
-                    [\tsc{n}]
-                ]
-            ]
-            [\tsc{dat}P,
-            tikz={
-            \node[label=below:\tit{mu},
-            draw,circle,
-            scale=0.925,
-            fit to=tree]{};
-            }
-                [\tsc{f3}]
-                    [\tsc{acc}P
-                    [\tsc{f2}]
-                    [\tsc{nom}P
-                        [\tsc{f1}]
-                        [\tsc{num}P
-                            [\tsc{num}]
-                        ]
-                    ]
-                ]
-            ]
-        ]
-    ]
-\end{forest}
+      \end{forest}\\
+      \bottomrule
+  \end{tabular}
+  \label{tbl:polish-int-wins}
+\end{table}
 
-Polish head
 
-\begin{forest} boom
-    [, s sep=30mm
-        [\tsc{pers}P,
-        tikz={
-        \node[label=below:\tit{k},
-        draw,circle,
-        scale=0.875,
-        fit to=tree]{};
-        }
-            [\tsc{pers}]
-            [\tsc{deix}P
-                [\tsc{deix}]
-                [\tsc{refP}
-                    [\tsc{ref2}]
-                    [\tsc{ref1}]
-                ]
-            ]
-        ]
-        [, s sep=20mm
-            [\tsc{m}P,
-            tikz={
-            \node[label=below:\tit{o},
-            draw,circle,
-            scale=0.925,
-            fit to=tree]{};
-            }
-                [\tsc{m}]
-                [\tsc{n}P
-                    [\tsc{n}]
-                ]
+\begin{table}[H]
+  \center
+	\caption {Polish: \ac{int} < \ac{ext}}
+		\begin{tabular}[b]{cc}
+      \toprule
+      \ac{int}  &   \ac{ext} \\ \cmidrule{1-2}
+      \begin{forest} boom
+        [\tsc{rel}P
+            [\tsc{wh}P
+                [\tit{k-}, roof]
             ]
             [\tsc{acc}P,
             tikz={
-            \node[label=below:\tit{go},
+            \node[label=below:\tit{tego},
             draw,circle,
-            scale=0.925,
+            scale=0.8,
             fit to=tree]{};
             }
                 [\tsc{f2}]
                 [\tsc{nom}P
                     [\tsc{f1}]
-                    [\tsc{num}P
-                        [\tsc{num}]
+                        [ϕP
+                        [\phantom{xxx},
+                        roof, baseline
+                        ]
                     ]
                 ]
             ]
         ]
-    ]
-\end{forest}
-
-show how internal-wins does not work
-show how external-wins does not work
+      \end{forest}
+      &
+      \begin{forest} boom
+        [\tsc{acc}P,
+        tikz={
+        \node[label=below:\tit{tego},
+        draw,circle,
+        scale=0.85,
+        fit to=tree]{};
+        }
+            [\tsc{f}2]
+            [\tsc{nom}P
+                [\tsc{f1}]
+                [\tsc{dP}
+                    [\tsc{d}]
+                    [ϕP
+                        [\phantom{xxx},
+                        roof, baseline
+                        ]
+                    ]
+                ]
+            ]
+        ]
+      \end{forest}\\
+      \bottomrule
+  \end{tabular}
+  \label{tbl:polish-ext-wins}
+\end{table}
 
 Radek with his definitnessless of Czech demonstratives
 
